--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-
 		<meta name="viewport" content="width=device-width" />
+
+		<title>FDND | Stack</title>
 
 		<!-- Fonts -->
 		<link
