--- a/src/app.html
+++ b/src/app.html
@@ -2,16 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="/%sveltekit.assets%/images/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 
 		<title>FDND | Stack</title>
-
-		<!-- Fonts -->
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@700&family=Rubik:wght@300;400;500;600;700&display=swap"
-			rel="stylesheet"
-		/>
 
 		%sveltekit.head%
 	</head>
