--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,12 @@
 
 		<title>FDND | Stack</title>
 
+		<!-- Fonts -->
+		<link
+				href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@700&family=Rubik:wght@300;400;500;600;700&display=swap"
+				rel="stylesheet"
+		/>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
