--- a/src/app.html
+++ b/src/app.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/%sveltekit.assets%/images/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
 
-		<title>FDND | Stack</title>
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="/%sveltekit.assets%/images/favicon.png" />
+	<meta name="viewport" content="width=device-width" />
 
-		<!-- Fonts -->
-		<link
-				href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@700&family=Rubik:wght@300;400;500;600;700&display=swap"
-				rel="stylesheet"
-		/>
+	<title>FDND | Stack</title>
 
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+	<!-- Fonts -->
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@700&family=Rubik:wght@300;400;500;600;700&display=swap"
+		rel="stylesheet" />
+
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+		rel="stylesheet">
+
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
